# WisprFree

./: .gitignore  Cargo.toml  PRD.md  README.md  SETUP_GUIDE.txt
docs/: index.html
models/: .gitkeep
src/: audio.rs  autostart.rs  config.rs  dashboard.rs  dictionary.rs  history.rs  hotkey.rs  injector.rs  main.rs  overlay.rs  paster.rs  punctuation.rs  shortcut.rs  snippets.rs  transcriber.rs  tray.rs
