[package]
name = "wisprfree"
version = "0.1.3"
edition = "2021"
description = "Local, private voice-to-text for Windows. Hold Ctrl+Space and speak."
license = "MIT"
readme = "README.md"

[[bin]]
name = "wisprfree"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
crossbeam-channel = "0.5"
tray-icon = "0.19"
muda = "0.15"
once_cell = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Graphics_Gdi",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
